<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="R6x-3T-3Vw">
    <device id="retina4_0" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Add new Assessment-->
        <scene sceneID="S5T-NW-u16">
            <objects>
                <viewController id="R6x-3T-3Vw" customClass="NewAssessmentViewController" customModule="myclass" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="5WQ-Fc-684">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EeV-YX-o0N">
                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y29-x2-v8F">
                                        <rect key="frame" x="0.0" y="0.0" width="320" height="265"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Assessment description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xSP-aP-5Eh">
                                                <rect key="frame" x="20" y="25" width="280" height="34"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Total marks" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1og-xa-I8y">
                                                <rect key="frame" x="20" y="69" width="280" height="34"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" textContentType="tel"/>
                                            </textField>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uvR-LC-gMe">
                                                <rect key="frame" x="20" y="223" width="280" height="30"/>
                                                <color key="backgroundColor" red="0.33333333329999998" green="0.90196078430000004" blue="0.75686274509999996" alpha="1" colorSpace="calibratedRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="zmB-iw-RBz"/>
                                                </constraints>
                                                <color key="tintColor" red="0.17254901959999999" green="0.2274509804" blue="0.2784313725" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                <state key="normal" title="Save"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="5"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="newAssessmentSave:" destination="R6x-3T-3Vw" eventType="touchUpInside" id="q8H-mR-OJM"/>
                                                </connections>
                                            </button>
                                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="vlI-Zv-9ZB">
                                                <rect key="frame" x="25" y="113" width="270" height="100"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="100" id="9Kn-Bn-l1g"/>
                                                </constraints>
                                            </datePicker>
                                        </subviews>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                        <constraints>
                                            <constraint firstAttribute="trailing" secondItem="vlI-Zv-9ZB" secondAttribute="trailing" constant="25" id="4hF-tB-bLR"/>
                                            <constraint firstItem="1og-xa-I8y" firstAttribute="leading" secondItem="y29-x2-v8F" secondAttribute="leading" constant="20" id="82V-mC-Cna"/>
                                            <constraint firstItem="uvR-LC-gMe" firstAttribute="top" secondItem="vlI-Zv-9ZB" secondAttribute="bottom" constant="10" id="GDd-LM-eJP"/>
                                            <constraint firstItem="xSP-aP-5Eh" firstAttribute="leading" secondItem="y29-x2-v8F" secondAttribute="leading" constant="20" id="IJA-Z6-Vzb"/>
                                            <constraint firstAttribute="bottom" secondItem="uvR-LC-gMe" secondAttribute="bottom" constant="12" id="JoZ-fc-0RW"/>
                                            <constraint firstItem="xSP-aP-5Eh" firstAttribute="top" secondItem="y29-x2-v8F" secondAttribute="top" constant="25" id="Z9Y-tu-p0a"/>
                                            <constraint firstItem="1og-xa-I8y" firstAttribute="top" secondItem="xSP-aP-5Eh" secondAttribute="bottom" constant="10" id="dfg-wB-t6D"/>
                                            <constraint firstItem="vlI-Zv-9ZB" firstAttribute="top" secondItem="1og-xa-I8y" secondAttribute="bottom" constant="10" id="e1V-8B-dLH"/>
                                            <constraint firstAttribute="trailing" secondItem="xSP-aP-5Eh" secondAttribute="trailing" constant="20" id="hN6-Eg-nUt"/>
                                            <constraint firstItem="vlI-Zv-9ZB" firstAttribute="leading" secondItem="y29-x2-v8F" secondAttribute="leading" constant="25" id="jSz-w3-CQf"/>
                                            <constraint firstItem="uvR-LC-gMe" firstAttribute="leading" secondItem="y29-x2-v8F" secondAttribute="leading" constant="20" id="m2U-Gx-9aD"/>
                                            <constraint firstAttribute="trailing" secondItem="1og-xa-I8y" secondAttribute="trailing" constant="20" id="toh-HD-zrh"/>
                                            <constraint firstAttribute="trailing" secondItem="uvR-LC-gMe" secondAttribute="trailing" constant="20" id="yiN-cw-EUb"/>
                                        </constraints>
                                    </view>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="bottom" secondItem="y29-x2-v8F" secondAttribute="bottom" id="LM2-Mi-8lI"/>
                                    <constraint firstItem="y29-x2-v8F" firstAttribute="height" secondItem="EeV-YX-o0N" secondAttribute="height" priority="250" constant="-303" id="S9c-GO-2xZ"/>
                                    <constraint firstItem="y29-x2-v8F" firstAttribute="top" secondItem="EeV-YX-o0N" secondAttribute="top" id="kR4-fH-kpx"/>
                                    <constraint firstItem="y29-x2-v8F" firstAttribute="leading" secondItem="EeV-YX-o0N" secondAttribute="leading" id="r5c-M3-0BC"/>
                                    <constraint firstAttribute="trailing" secondItem="y29-x2-v8F" secondAttribute="trailing" id="sBq-2N-zhs"/>
                                    <constraint firstItem="y29-x2-v8F" firstAttribute="width" secondItem="EeV-YX-o0N" secondAttribute="width" id="z0h-o6-NgD"/>
                                </constraints>
                                <viewLayoutGuide key="contentLayoutGuide" id="LiX-dg-tny"/>
                                <viewLayoutGuide key="frameLayoutGuide" id="5T7-Px-bWC"/>
                            </scrollView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="GiH-QV-7gs" firstAttribute="bottom" secondItem="EeV-YX-o0N" secondAttribute="bottom" id="FZL-LL-sTc"/>
                            <constraint firstItem="EeV-YX-o0N" firstAttribute="leading" secondItem="GiH-QV-7gs" secondAttribute="leading" id="QI6-WI-64Z"/>
                            <constraint firstItem="GiH-QV-7gs" firstAttribute="trailing" secondItem="EeV-YX-o0N" secondAttribute="trailing" id="Wtc-gK-tcE"/>
                            <constraint firstItem="EeV-YX-o0N" firstAttribute="top" secondItem="GiH-QV-7gs" secondAttribute="top" id="exn-xa-RXz"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="GiH-QV-7gs"/>
                    </view>
                    <navigationItem key="navigationItem" title="Add new Assessment" id="khg-7I-och"/>
                    <connections>
                        <outlet property="assessmentDate" destination="vlI-Zv-9ZB" id="kcT-rj-ZWJ"/>
                        <outlet property="assessmentDesc" destination="xSP-aP-5Eh" id="OnX-gX-9X1"/>
                        <outlet property="assessmentMarks" destination="1og-xa-I8y" id="rZ6-rE-fPn"/>
                        <outlet property="scrollView" destination="EeV-YX-o0N" id="JTo-YD-Th5"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Gsf-hF-Tp6" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="91.875" y="81.338028169014081"/>
        </scene>
    </scenes>
</document>
