...
            <point key="canvasLocation" x="-519" y="-838"/>
        </scene>
        <!--Assessment-->
        <scene sceneID="A0B-FR-u3W">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Tfx-4N-b9U" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Assessment" image="marksIcons" id="eyS-fa-UJ1"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="tTh-Pf-MkU">
                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" red="0.79215686269999996" green="0.82745098039999998" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </navigationBar>
...
            </objects>
            <point key="canvasLocation" x="358" y="-729"/>
        </scene>
        <!--Assessments-->
        <scene sceneID="G7E-Eo-GGQ">
            <objects>
                <viewControllerPlaceholder storyboardName="Assessments" id="N4K-9G-Qcf" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" id="oQV-28-owx"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="yZd-Mg-bPd" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="479" y="-147"/>
        </scene>
...
