...
                print(error)
            }
            }.resume()
        
        // add a dummy student or test
        
//        allStudent.append(Student(studentEmail: "test@test.com", studentID: "2332323", studentFirstName: "test", studentLastName: "test", studentPhone: "3434343", studentImage: "download", studentAttendance: [], studentMarks: []))
        
    }
    
    // add More objects
//    static func addSharedData(StudOBJ : Student) {
//        allStudent.append(StudOBJ)
...
